plugins {
	id 'application'
	id 'eclipse'
}

sourceCompatibility = 17
targetCompatibility = 17

distTar.enabled=false
distZip.enabled=true

mainClassName='kieker.tools.cmi.CheckModelIntegrityMain'

sourceSets.main.resources.srcDirs = [ '../resources' ]

dependencies {
	implementation project(":common")
	implementation project(":analysis")
	implementation project(":tools")

	implementation "com.beust:jcommander:${jcommanderVersion}"
	implementation "com.edwardraff:JSAT:0.0.9"

	testImplementation project (path: ':common', configuration: 'testArchives')
	testImplementation project (path: ':tools', configuration: 'testArchives')
	testImplementation "org.mockito:mockito-core:5.23.0"
	testImplementation "de.cau.cs.se.teetime:teetime:${libTeetimeVersion}:test"
}

task uploadArchives {
	println 'cmi skipped'
}

eclipse {
	classpath {
		file {
			whenMerged { classpath ->
				classpath.entries.removeAll { entry ->
					entry instanceof org.gradle.plugins.ide.eclipse.model.ProjectDependency
						&& ['/common', '/tools'].contains(entry.path)
						&& entry.entryAttributes['test']
				}
			}
		}
	}
}

tasks.named("compileJava") {
	options.compilerArgs += ['--add-reads', "kieker.analysis=ALL-UNNAMED",
							 '--add-reads', "kieker.tools=ALL-UNNAMED",
							 '--add-reads', "kieker.tools.cmi=ALL-UNNAMED",
	]
}